# Healthkit-influxdb-grafana

./: Dockerfile  README.md  app.py  docker-compose.yml  example.env  example_make_influxdb.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  docker-publish.yml
health_data/: app.py  influx_config.py  models.py
test/: data.json  test_example_data.py
